[gd_scene load_steps=22 format=2]

[ext_resource path="res://Characters/Dababy/dababysprtsht.png" type="Texture" id=1]
[ext_resource path="res://Characters/Dababy/dababyplayer.gd" type="Script" id=2]
[ext_resource path="res://Characters/Hitboxes/Hurtbox.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.5086, 14 )

[sub_resource type="Animation" id=2]
resource_name = "ConvertibleIdle"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("dababy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 10 ]
}

[sub_resource type="Animation" id=3]
resource_name = "ConvertibleMoveLeft"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("dababy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dababy:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "ConvertibleMoveRight"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("dababy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dababy:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "ConvertibleStaleMove"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("dababy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 10 ]
}

[sub_resource type="Animation" id=6]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("dababy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dababy:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("dababy:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("dababy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=8]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("dababy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 9, 7, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "rtransform_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("dababy:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("dababy:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, -7 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("dababy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dababy:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("dababy:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("dababy:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("dababy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dababy:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("dababy:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("dababy:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("dababy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 15 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "shoot_start"
}, {
"args": [  ],
"method": "shoot_state_finished"
} ]
}

[sub_resource type="Animation" id=12]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("dababy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 7, 9 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "transform_finished"
} ]
}

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 19, 14 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 9, 12 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.529412, 0.819608, 0.372549, 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.772549, 0.317647, 0.317647, 1 )

[sub_resource type="Animation" id=17]
resource_name = "fade"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "progress_disappear"
} ]
}

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 13, 14 )

[node name="dababy" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="dababy" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 17

[node name="dababyanimation" type="AnimationPlayer" parent="."]
anims/ConvertibleIdle = SubResource( 2 )
anims/ConvertibleMoveLeft = SubResource( 3 )
anims/ConvertibleMoveRight = SubResource( 4 )
anims/ConvertibleStaleMove = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/Jump = SubResource( 7 )
anims/RTransform = SubResource( 8 )
anims/Run = SubResource( 9 )
anims/RunLeft = SubResource( 10 )
anims/Shoot = SubResource( 11 )
anims/Transform = SubResource( 12 )

[node name="DetectionTrigger" parent="." instance=ExtResource( 3 )]
collision_mask = 16

[node name="CollisionShape2D" parent="DetectionTrigger" index="0"]
shape = SubResource( 13 )

[node name="DeathSensor" parent="." instance=ExtResource( 3 )]
collision_layer = 2

[node name="CollisionShape2D" parent="DeathSensor" index="0"]
shape = SubResource( 14 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.02

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -17.0
margin_top = -20.0
margin_right = 17.0
margin_bottom = -15.0
custom_styles/fg = SubResource( 15 )
custom_styles/bg = SubResource( 16 )
max_value = 3.0
value = 3.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="ProgressBar"]
margin_right = 34.0
margin_bottom = 5.0
border_color = Color( 0.117647, 0.117647, 0.117647, 1 )
border_width = 1.1
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ProgressBar"]
anims/fade = SubResource( 17 )

[node name="UltimateDeathSensor" parent="." instance=ExtResource( 3 )]
collision_layer = 128

[node name="CollisionShape2D" parent="UltimateDeathSensor" index="0"]
shape = SubResource( 18 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.8, 0.8 )
smoothing_enabled = true

[connection signal="area_entered" from="DeathSensor" to="." method="_on_DeathSensor_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="UltimateDeathSensor" to="." method="_on_UltimateDeathSensor_area_entered"]

[editable path="DetectionTrigger"]
[editable path="DeathSensor"]
[editable path="UltimateDeathSensor"]
